--- a/AbsoluteBasics.Rmd
+++ b/AbsoluteBasics.Rmd
@@ -268,8 +268,8 @@ Call your new function and confirm that it works as expected.
 
 *******************************************************************************************************************************************
 *******************************************************************************************************************************************
-## Data Frames and Tibbles
-Many of the data sets we work with can be described (or made to be) a kind of table, where each row represents a different entity and each column represents a different aspect of that entity. Let's take a simple example. Here we are going to build our own data set by entering the data manually as a series of vectors.
+# Data Frames and Tibbles
+Many of the data sets we work with can be described as (or made to be) a kind of table, where each row represents a different entity and each column represents a different aspect of that entity. Let's take a simple example. Here we are going to build our own data set by entering the data manually as a series of vectors.
 
 In R, we will build this data object as a *tibble*. You can think of a tibble as a kind of lazy data frame; when you make a tibble, it doesn't try to do much to make your data make sense, or to repair your data names. This is a good thing; you get to make more decisions about the contents of your own data. It does mean you have to be a bit careful about how you build.
 
@@ -336,9 +336,9 @@ mydata %>%
 
 *******************************************************************************************************************************************
 ## Exploring Your Data
-For the rest of these exercises, we will use the Pokemon data set that we installed from CRAN.
+Now we can start asking some questions!
 
-Let's see what we're dealing with. Base R has some options for looking at a data set directly. For example, *View()* can be used to pop up the data as a table in a new tab.  
+The professor didn't actually bother to tell us anything about what's in the data set, so let's start by taking a look ourselves. Base R has some options for looking at a data set directly. For example, *View()* can be used to pop up the data as a table in a new tab.  
 ```{r}
 View(pokemon)
 ```
@@ -359,6 +359,7 @@ print(pokemon, n=10, width=6)
 ```
 
 
+***************************************************************************************************************************************
 ## Viewing Data Subsets
 We can choose to access pieces of the data frame by name or by index. The names of the data are the column headers:
 ```{r}
@@ -424,8 +425,52 @@ As you can see, these calls are interchangeable with the ones above in base R.
 You get the idea. There's a lot of ways to call pieces out of a data object, but we have to be a little careful when trying to mix and match across packages.
 
 
+***************************************************************************************************************************************
+## Summarizing Data
+We can see that some of the components of the data are *categories* (type_1, type_2, generation_id), some are *measurements* (height, weight, attack, defense...), and some are *properties* (ID, pokemon (name), colors, url_image). 
 
+We need to start analyzing these data, but we don't even know what questions to ask yet, so we can begin by exploring the data. Maybe we should see if the averages of some of these measurements are different for different categories of Pokemon?
+
+The function *dplyr::summarize()* will let us do that easily.
+```{r}
+?dplyr::summarize
+#?dplyr::summarise #These are the same function - either spelling is fine
+```
+
+Let's try it. Are there any differences in average measurements for Pokemon of different primary types? First we have to group the data according to primary type. What does this do to the data set?
+```{r}
+pokemon %>%
+  group_by(type_1)
+```
+
+Then we can ask the *summarize()* function to calculate lots of different summary statistics for us.
+```{r}
+pokemon_avg_by_type<-pokemon %>%
+  group_by(type_1) %>%
+  summarize(
+    mean_height=mean(height, na.rm=TRUE),
+    mean_weight=mean(weight, na.rm=TRUE),
+    mean_hp=mean(hp, na.rm=TRUE),
+    mean_attack=mean(attack, na.rm=TRUE),
+    mean_defense=mean(defense, na.rm=TRUE),
+    mean_speed=mean(speed, na.rm=TRUE),
+    n=n()
+  )
+glimpse(pokemon_avg_by_type)
+```
+
+**EXERCISE:** Create your own summary of the data set and save it as a new object. What do you want to group by? What summary measures do you want to take?
+```{r}
+
+```
+
+
+
+***************************************************************************************************************************************
+***************************************************************************************************************************************
 # Plotting in Base R
+Now we've processed the data a little bit, but it's still hard to see what these data mean - this is a big data set with a lot of groups and a lot of information. It will help to visualize the data.
+
 There are lots of plots provided as part of base R. While the ggverse gives us a lot more flexibility and power, these functions are still a great place to start. 
 
 ## Two continuous variables: Scatterplot
@@ -439,13 +484,16 @@ which will produce a generic x-y plot. By default, this is a scatter plot. Let's
 plot(pokemon$height, pokemon$weight) # first data are x axis, second are y axis
 ```
 
-We can also change the type of plot using the "type" argument. In the code block below, make sure only one type is un-commented at a time to explore different options:
+We can also change the type of plot using the "type" argument. 
+
+
+**EXERCISE** In the code block below, make sure only one type is un-commented at a time to explore different options. What works well for showing these data? What doesn't work so well?
 ```{r}
 plot(pokemon$height, 
      pokemon$weight,
      col="red",  # declare color
-#     type="l"  # lines
-     type="p" # points
+     type="l"  # lines
+#     type="p" # points
 #     type="b"  # both
 #     type="o"  # lines & points over-plotted
      ) 
@@ -468,14 +516,91 @@ One continuous (numeric) variable can be plotted as a histogram:
 ```{r}
 hist(pokemon$weight)
 ```
+The range of the data is very large. Maybe it would be better to use smaller bins?
+```{r}
+hist(pokemon$weight, breaks=100)
+```
+
+Or space the breaks differently:
+```{r}
+hist(pokemon$weight, breaks=c(0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 150, 200, 250, 300,
+                              350, 400, 450, 500, 550, 600, 700, 800, 900, 1000))
+```
+Honestly it might just be better to plot the log-transformed data:
+```{r}
+hist(log10(pokemon$weight))
+```
+
+
+## Two continuous variables: Barplot
+Remember that we summarized our data earlier. Let's take a closer look at those summaries and see if we can observe any differences between groups. One easy way to do this is with a barplot:
+```{r}
+?barplot
+```
+
+Let's start with some of the basic statistics - height and weight. Are these different across groups?
+```{r}
+barplot(mean_height ~ type_1, pokemon_avg_by_type)
+```
+
+
+It's hard to see the x-axis labels on this plot. It would be easier if they were rotated. This is a little convoluted to do in base R; as we will see in the next workshop, this is much easier in ggplot.
+```{r}
+# First, create the plot
+barplot(mean_height~type_1, # formula
+        data=pokemon_avg_by_type,  # provide the name of the data object
+        width=0.85,
+        xlab="Type",
+        ylab="Mean Height",
+        xaxt = "n" # don't print the x-axis labels on the plot yet
+        )  
+
+# The summary object contains the category names, which are the x-axis labels we want
+tick <- seq_along(pokemon_avg_by_type$type_1)
+
+# Then we can use text() to put the labels on the axis
+axis(1, at = tick, labels = FALSE)
+text(tick-0.5, par("usr")[3]-0.3, # This positions the new labels
+     pokemon_avg_by_type$type_1,  # what are the labels
+     srt = 45,  # 45 degree text angle
+     xpd = TRUE
+     )
+```
+
+How about for weight?
+```{r}
+# First, create the plot
+barplot(mean_weight~type_1, # formula
+        data=pokemon_avg_by_type,  # provide the name of the data object
+        width=0.85,
+        xlab="Type",
+        ylab="Mean Weight",
+        xaxt = "n" # don't print the x-axis labels on the plot yet
+        )  
+
+# The summary object contains the category names, which are the x-axis labels we want
+tick <- seq_along(pokemon_avg_by_type$type_1)
+
+# Then we can use text() to put the labels on the axis
+axis(1, at = tick, labels = FALSE)
+text(tick-0.5, par("usr")[3]-0.3, # This positions the new labels
+     pokemon_avg_by_type$type_1,  # what are the labels
+     srt = 45,  # 45 degree text angle
+     xpd = TRUE
+     )
+```
+Uh-oh. What happened?
+
+**EXERCISE:** Change the positions of the labels in the plot above to make it look better. Why do we need to change the position for this plot?
+
 
 # Continuous (numeric) data by category: Boxplots
-If your data have categorical variables (with distinct, discrete values or levels), those can be used as categories for plotting. Here, pokemon have different types:
+If your data have categorical variables (with distinct, discrete values or levels), those can be used as categories for plotting. We already know that pokemon have different types:
 ```{r}
 unique(pokemon$type_1)
 ```
 
-And these types can be used as a grouping:
+And that these types can be used as a grouping. If we want to see all the data points instead of just the summary statistics, we can ask R to do the data grouping inside a plot:
 ```{r}
 boxplot(weight~type_1, # formula. Weight data are grouped by the levels in type_1
         data=pokemon,  # provide the name of the data object
@@ -483,7 +608,7 @@ boxplot(weight~type_1, # formula. Weight data are grouped by the levels in type_
         ylab="Weight"
         )
 ```
-It's hard to see the x-axis labels on this plot. It would be easier if they were rotated. This is a little convoluted to do in base R; as we will see in the next workshop, this is much easier in ggplot.
+Once again, we have to rotate the labels. This time, since the plot did the data grouping, it held onto the list of Pokemon types as a component of the plot object itself:
 ```{r}
 # First, save the boxplot as an object
 bp<-boxplot(weight~type_1, # formula. Weight data are grouped by the levels in type_1
@@ -504,6 +629,54 @@ text(tick, par("usr")[3] - 100, # This positions the new labels
      xpd = TRUE)
 ```
 
+Let's make this plot for height as well. We can put two (or more) plots together in a single display using *par()*:
+```{r}
+par(mfrow=c(1,2))  #Call up a graphics window with one row and two columns
+
+###########################################
+# plot into the first row
+# First, save the boxplot as an object
+bp_weight<-boxplot(weight~type_1, # formula. Weight data are grouped by the levels in type_1
+        data=pokemon,  # provide the name of the data object
+        xlab="Type",
+        ylab="Weight",
+        xaxt = "n" # don't print the x-axis labels on the plot yet
+        )  
+
+# The object contains the category names, which are the x-axis labels we want
+tick <- seq_along(bp_weight$names)
+
+# Then we can use text() to put the labels on the axis
+axis(1, at = tick, labels = FALSE)
+text(tick, par("usr")[3] - 100, # This positions the new labels
+     bp_weight$names,  # what are the labels
+     srt = 45,  # 45 degree text angle
+     xpd = TRUE)
+
+###################################
+# plot into the second row
+bp_height<-boxplot(height~type_1, # formula. Weight data are grouped by the levels in type_1
+        data=pokemon,  # provide the name of the data object
+        xlab="Type",
+        ylab="Height",
+        xaxt = "n" # don't print the x-axis labels on the plot yet
+        )  
+
+# The object contains the category names, which are the x-axis labels we want
+tick <- seq_along(bp_height$names)
+
+# Then we can use text() to put the labels on the axis
+axis(1, at = tick, labels = FALSE)
+text(tick, par("usr")[3] - 1.5, # This positions the new labels
+     bp_height$names,  # what are the labels
+     srt = 45,  # 45 degree text angle
+     xpd = TRUE)
+```
+
+**EXERCISE:** Make your own plots using the code in this section. Explore different measurements and groupings.
+```{r}
+
+```
 
 
 # Resources
